--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
           <a class="logo link down-logo" href="./index.html">
             <span class="logo-span">Web</span>Studio
           </a>
-          <address class="footer-address">
+          <address class="footer__address">
             <p class="footer__address-text">г. Киев, пр-т Леси Украинки, 26</p>
             <ul class="list footer__address-list">
               <li class="footer__address-item">
